--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,25 @@
+html{
+    height: 100%;
+}
 body{
-    background-color: rgb(32,119,86);
+    background-image: linear-gradient( rgba(32,119,86,1), rgb(28, 2, 255));
+}
+
+p{
+    color: white;
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    
 }
 
 img{
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+.bin{
+    border-style: solid;
+    background-color: aliceblue;
+    border-width: 7px;
 }
