--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,15 @@ p{
     font-family: 'Roboto', sans-serif;
     text-align: center;
     
+    
+}
+
+h1{
+    color: white;
+    font-size: 50px;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    letter-spacing: 3px;
 }
 
 img{
